--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+    <!-- NAV BAR -->
+    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Flavia Martinez</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Sobre Mi</a>
@@ -29,9 +30,6 @@
           </div>
         </div>
       </nav>
-    <h1 id="titulo">Curriculum Vitae</h1>
-    <h1 class="nombre">Flavia Martínez</h1>
-    <p>Ingeniera Comercial</p>
     <img src="./assets/img/profile.jpeg" alt="profile" width="200" height="200"><br>
     <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
     target="_blank"><img src="./assets/img/linkedin.png" alt="Linkedin" width="50" height="50"></a>
