--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- NAV BAR -->
-    <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Flavia Martinez</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,8 +29,30 @@
             </div>
           </div>
         </div>
-      </nav>
-    <img src="./assets/img/profile.jpeg" alt="profile" width="200" height="200"><br>
+    </nav>
+
+    <!-- HERO SECTION -->
+    <header id="Hero-Section" class="text-light text-start py-5 mt-5">
+        <div class="container">
+            <div class="me-auto col-12 col-md-7 ">
+                <h1 class="display-1 fw-bold my-3">
+                    Ingeniera <br> Comercial
+                </h1>
+                <div class="row">
+                    <div class="col-12 col-md-8"> <!-- El párrafo ocupa 8/12 del ancho en pantallas medianas -->
+                        <p class="my-3">
+                            Ingeniera Comercial de la Pontificia Universidad Católica de Chile, con mención en Administración de Empresas. Cuento con una sólida formación en gestión empresarial, finanzas y estrategia, complementada con habilidades analíticas y de liderazgo.
+                        </p>
+                    </div>
+                </div>
+                <div class="mb-5 pb-5">
+                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
     target="_blank"><img src="./assets/img/linkedin.png" alt="Linkedin" width="50" height="50"></a>
     <h3>Educación</h3>
