add portafolio button

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Sobre Mi</a>
+              <a class="nav-link" href="#">Educación</a>
               <a class="nav-link" href="#">Experiencia</a>
               <a class="nav-link" href="#">Habilidades</a>
-              <a class="nav-link disabled" aria-disabled="true">Contacto</a>
+              <a class="nav-link">Contacto</a>
             </div>
           </div>
         </div>
@@ -46,15 +46,11 @@
                     </div>
                 </div>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                    <button class="btn btn-lg btn-info text-light">Portafolio</button>
                 </div>
             </div>
         </div>
     </header>
-
-    <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
-    target="_blank"><img src="./assets/img/linkedin.png" alt="Linkedin" width="50" height="50"></a>
     <h3>Educación</h3>
     <hr>
     <ol>
