add education section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Educación</a>
+              <a class="nav-link" href="#education">Educación</a>
               <a class="nav-link" href="#">Experiencia</a>
               <a class="nav-link" href="#">Habilidades</a>
               <a class="nav-link">Contacto</a>
@@ -51,19 +51,32 @@
             </div>
         </div>
     </header>
-    <h3>Educación</h3>
-    <hr>
-    <ol>
-        <li>Colegio Manquecura 2006 - 2007</li>
-        <ul class="awards">
-            <li>Premio Excelencia Académica</li>
-            <li>Premio Mérito Educativo</li>
-        </ul>
-        <li>Ingenieria Comercial Pontificia Universidad Católica de Chile 2018 - 2022</li>
-        <ul>
-            <li>Mención Administración de Empresas</li>
-        </ul>
-    </ol>
+    <!-- EDUCATION -->
+    <section class="resume-section" id="education">
+        <div class="resume-section-content mx-3 my-5">
+            <h2 class="fw-bold">EDUCACIÓN</h2>
+            <div class="d-flex flex-column flex-md-row mt-3">
+                <div class="flex-grow-1">
+                    <h4 class="mb-0">Colegio Manquecura</h3>
+                    <div class="mb-2 fw-light">Educación Básica y Media</div>
+                    <div class="fw-light">Premio Excelencia Académica - Premio Mérito Educativo</div>
+                </div>
+                <div class="flex-shrink-0">
+                   <span class="text-primary">2006 - 2017</span>
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row mt-3">
+                <div class="flex-grow-1">
+                    <h4 class="mb-0">Pontificia Universidad Católica</h3>
+                    <div class="mb-2 fw-light">Ingeniería Comercial</div>
+                    <div class="fw-light">Mención Administración de Empresas</div>
+                </div>
+                <div class="flex-shrink-0">
+                   <span class="text-primary">Marzo 2018 - Diciembre 2022</span>
+                </div>
+            </div>
+        </div>
+    </section>
     <h3>Experiencia Laboral</h3>
     <hr>
     <ol>
