--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flavia Martinez</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="./assets/icon/favicon-32x32.png">
@@ -35,7 +36,7 @@
     <header id="Hero-Section" class="text-light text-start py-5 mt-5">
         <div class="container">
             <div class="me-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-3">
+                <h1 class="display-1 fw-bold my-4">
                     Ingeniera <br> Comercial
                 </h1>
                 <div class="row">
@@ -43,6 +44,14 @@
                         <p class="my-3">
                             Ingeniera Comercial de la Pontificia Universidad Católica de Chile, con mención en Administración de Empresas. Cuento con una sólida formación en gestión empresarial, finanzas y estrategia, complementada con habilidades analíticas y de liderazgo.
                         </p>
+                    </div>
+                </div>
+                <div class="d-flex social-icons mb-3">
+                    <div class="d-flex justify-content-center align-items-center rounded-circle bg-info ">
+                        <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="fa-brands fa-linkedin-in fa-lg text-dark text-decoration-none" target="_blank"></a>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center rounded-circle bg-info">
+                        <a href="https://github.com/flaviamartinez" class="fa-brands fa-github fa-2x text-dark text-decoration-none" target="_blank"></a>
                     </div>
                 </div>
                 <div class="mb-5 pb-5">
@@ -53,7 +62,7 @@
     </header>
     <!-- EDUCATION -->
     <section class="resume-section" id="education">
-        <div class="resume-section-content mx-3 my-5">
+        <div class="resume-section-content mx-4 my-5">
             <h2 class="fw-bold">EDUCACIÓN</h2>
             <div class="d-flex flex-column flex-md-row mt-3">
                 <div class="flex-grow-1">
