--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     </div>
                 </div>
                 <div class="d-flex social-icons mb-3">
-                    <div class="d-flex justify-content-center align-items-center rounded-circle bg-info ">
+                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-info ">
                         <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="fa-brands fa-linkedin-in fa-lg text-dark text-decoration-none" target="_blank"></a>
                     </div>
-                    <div class="d-flex justify-content-center align-items-center rounded-circle bg-info">
+                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-info">
                         <a href="https://github.com/flaviamartinez" class="fa-brands fa-github fa-2x text-dark text-decoration-none" target="_blank"></a>
                     </div>
                 </div>
