add experience section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#education">Educación</a>
-              <a class="nav-link" href="#">Experiencia</a>
+              <a class="nav-link" href="#experience">Experiencia</a>
               <a class="nav-link" href="#">Habilidades</a>
               <a class="nav-link">Contacto</a>
             </div>
@@ -86,24 +86,40 @@
             </div>
         </div>
     </section>
-    <h3>Experiencia Laboral</h3>
-    <hr>
-    <ol>
-        <li>Pontificia Universidad Católica. Facultad Economía y Administración</li>
-        <ul>
-            <li>Ayudante Inferencia Estadística</li>
-            <li>Ayudante Introducción a la Macroeconomía</li>
-            <li>Ayudante Introducción a la programación</li>
-        </ul>
-        <li>Falabella Retail. Área Electrohogar</li>
-        <ul>
-            <li>Práctica Profesional</li>
-        </ul>
-        <li>LATAM Airlines. Revenue Management</li>
-        <ul>
-            <li>Ingeniero Operacional RM </li>
-        </ul>
-    </ol>
+    <!-- EXPERIENCE -->
+    <!-- EDUCATION -->
+    <section class="resume-section" id="experience">
+        <div class="resume-section-content mx-4 mb-5">
+            <h2 class="fw-bold">EXPERIENCIA</h2>
+            <div class="d-flex flex-column flex-md-row mt-3">
+                <div class="flex-grow-1">
+                    <h4 class="mb-0">Pontificia Universidad Católica de Chile</h3>
+                    <div class="mb-2 fw-light">Ayudante Introducción Programación</div>
+                </div>
+                <div class="flex-shrink-0">
+                   <span class="text-primary">2021 - 2022</span>
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row mt-3">
+                <div class="flex-grow-1">
+                    <h4 class="mb-0">Práctica Falabella Retail</h3>
+                    <div class="mb-2 fw-light">Área Electrohogar</div>
+                </div>
+                <div class="flex-shrink-0">
+                   <span class="text-primary">Enero 2022 - Febrero 2022</span>
+                </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row mt-3">
+                <div class="flex-grow-1">
+                    <h4 class="mb-0">LATAM Airlines</h3>
+                    <div class="mb-2 fw-light">Ingeniera Operacional</div>
+                </div>
+                <div class="flex-shrink-0">
+                   <span class="text-primary">Julio 2023 - Actualidad</span>
+                </div>
+            </div>
+        </div>
+    </section>
     <h3>Intereses</h3>
     <hr>
     <p>Tengo una gran interés por la programación, la moda y los animales. He sido voluntaria en la Fundación Garras y Patas que rescata perros y gatos, donde descubrí lo gratificante que es ayudar a nuestros amigos peludos. Además, estoy muy interesada en seguir aprendiendo y mejorando mis habilidades en programación, ya que considero que la tecnología tiene el poder de transformar industrias y mejorar nuestras vidas. La moda también me fascina, ya que es una forma de expresión personal y creatividad.</p>
