--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
         </div>
     </section>
     <!-- EXPERIENCE -->
-    <!-- EDUCATION -->
     <section class="resume-section" id="experience">
         <div class="resume-section-content mx-4 mb-5">
             <h2 class="fw-bold">EXPERIENCIA</h2>
@@ -120,12 +119,9 @@
             </div>
         </div>
     </section>
-    <h3>Intereses</h3>
-    <hr>
-    <p>Tengo una gran interés por la programación, la moda y los animales. He sido voluntaria en la Fundación Garras y Patas que rescata perros y gatos, donde descubrí lo gratificante que es ayudar a nuestros amigos peludos. Además, estoy muy interesada en seguir aprendiendo y mejorando mis habilidades en programación, ya que considero que la tecnología tiene el poder de transformar industrias y mejorar nuestras vidas. La moda también me fascina, ya que es una forma de expresión personal y creatividad.</p>
-    <h3>Portafolio</h3>
-    <hr>
-    <a href="./portafolio.html">Ir a portafolio</a>
+    <footer class="bg-primary text-center text-light p-3">
+        <p class="mb-0">Flavia Martinez 2024. flavia.martinez@uc.cl</p>
+    </footer>
 </body>
 
 </html>
