--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#education">Educación</a>
               <a class="nav-link" href="#experience">Experiencia</a>
               <a class="nav-link" href="#">Habilidades</a>
-              <a class="nav-link">Contacto</a>
+              <a class="nav-link" href="#contact">Contacto</a>
             </div>
           </div>
         </div>
@@ -48,13 +48,13 @@
                 </div>
                 <div class="d-flex social-icons mb-3">
                     <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-primary ">
-                        <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="fa-brands fa-linkedin-in fa-lg text-white text-decoration-none" target="_blank"></a>
+                        <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="fa-brands fa-linkedin-in fa-lg text-light text-decoration-none" target="_blank"></a>
                     </div>
                     <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-primary">
-                        <a href="https://github.com/flaviamartinez" class="fa-brands fa-github fa-2x text-white text-decoration-none" target="_blank"></a>
+                        <a href="https://github.com/flaviamartinez" class="fa-brands fa-github fa-2x text-light text-decoration-none" target="_blank"></a>
                     </div>
                 </div>
-                <a href="./portafolio.html" class="btn btn-primary text-white" target="_blank">Portafolio</a>
+                <a href="./portafolio.html" class="btn btn-primary text-light" target="_blank">Portafolio</a>
             </div>
         </div>
     </header>
@@ -86,7 +86,7 @@
     </section>
     <!-- EXPERIENCE -->
     <section class="resume-section" id="experience">
-        <div class="resume-section-content mx-4 mb-5">
+        <div class="resume-section-content mx-4">
             <h2 class="fw-bold">EXPERIENCIA</h2>
             <div class="d-flex flex-column flex-md-row mt-3">
                 <div class="flex-grow-1">
@@ -116,6 +116,27 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!-- CONTACT -->
+    <section id="contact" class="container my-5">
+        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <form>
+            <div class="form-group mb-4">
+                <label class="mb-2">Nombre</label>
+                <input class="form-control" placeholder="Nombre">
+            </div>
+            <div class="form-group mb-4">
+                <label class="mb-2">Correo electrónico</label>
+                <input class="form-control" placeholder="Correo electrónico" />
+            </div>
+            <div class="form-group">
+                <label class="mb-2">Mensaje</label>
+                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+            </div>
+            <div class="my-3 text-end">
+                <button class="btn btn-primary text-light">Enviar</button>
+            </div>
+        </form>
     </section>
     <footer class="bg-primary text-center text-light p-3">
         <p class="mb-0">Flavia Martinez 2024. flavia.martinez@uc.cl</p>
