--- a/portafolio.html
+++ b/portafolio.html
@@ -8,24 +8,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./assets/css/style-portfolio.css">
 </head>
 
 <body>
-    <h3>Portafolio</h3>
-    <hr>
-    <table>
-        <tr>
-            <th>Curriculum</th>
-            <td><img src="./assets/img/proyecto1.png" alt="curriculim" width="720" height="350"></td>
-        </tr>
-        <tr>
-            <th>Proyecto 2</th>
-        </tr>
-        <tr>
-            <th>Proyecto 3</th>
-        </tr>
-    </table>
-    <a href="./index.html">Volver a CV</a>
+    <div class="container">
+        <h2 class="section-title text-center py-4">Portfolio</h2>
+        <!-- Portfolio Items -->
+        <div class="row gy-4">
+          <div class="col-lg-6 col-md-12">
+            <div class="portfolio-wrap d-flex flex-column align-items-center m-2 h-100">
+              <img src="./assets/img/cv-html.png" class="img-fluid portfolio-img" alt="">
+              <a href="https://github.com/flaviamartinez/curriculum-vitae" class="fw-light text-decoration-none fs-4 m-2" target="_blank">Curriculum Vitae HTML</a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="portfolio-wrap d-flex flex-column align-items-center  m-2 h-100">
+              <img src="./assets/img/iguana-landing.png" class="img-fluid portfolio-img" alt="">
+              <a href="https://github.com/flaviamartinez/iguana-page" class="fw-light text-decoration-none fs-4 m-2" target="_blank">Iguana Page</a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="portfolio-wrap d-flex flex-column align-items-center m-2 h-100">
+              <img src="./assets/img/pets-adoption.png" class="img-fluid portfolio-img" alt="">
+              <a href="https://github.com/flaviamartinez/pet-adoption" class="fw-light text-decoration-none fs-4 m-2" target="_blank">Página Adopción</a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="portfolio-wrap d-flex flex-column align-items-center  m-2 h-100">
+              <img src="./assets/img/cuppon.png" class="img-fluid portfolio-img" alt="">
+              <a href="https://github.com/flaviamartinez/cuppon-page" class="fw-light text-decoration-none fs-4 m-2" target="_blank">Cuppon</a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="portfolio-wrap d-flex flex-column align-items-center m-2 h-100">
+              <img src="./assets/img/cv-landing.png" class="img-fluid portfolio-img" alt="">
+              <a href="https://github.com/flaviamartinez/fdsw-github" class="fw-light text-decoration-none fs-4 m-2" target="_blank">Curriculum Vitae</a>
+            </div>
+          </div>
+        </div>
+    </div>
 </body>
 
 </html>
