--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </header>
     <!-- EDUCATION -->
     <section class="resume-section" id="education">
-        <div class="resume-section-content mx-4 my-5">
+        <div class="resume-section-content mx-5 my-5">
             <h2 class="fw-bold">EDUCACIÓN</h2>
-            <div class="d-flex flex-column flex-md-row mt-3">
+            <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Colegio Manquecura</h3>
                     <div class="mb-2 fw-light">Educación Básica y Media</div>
@@ -71,7 +71,7 @@
                    <span class="text-primary">2006 - 2017</span>
                 </div>
             </div>
-            <div class="d-flex flex-column flex-md-row mt-3">
+            <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Pontificia Universidad Católica</h3>
                     <div class="mb-2 fw-light">Ingeniería Comercial</div>
@@ -85,9 +85,9 @@
     </section>
     <!-- EXPERIENCE -->
     <section class="resume-section" id="experience">
-        <div class="resume-section-content mx-4">
+        <div class="resume-section-content mx-5">
             <h2 class="fw-bold">EXPERIENCIA</h2>
-            <div class="d-flex flex-column flex-md-row mt-3">
+            <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Pontificia Universidad Católica de Chile</h3>
                     <div class="mb-2 fw-light">Ayudante Introducción Programación</div>
@@ -96,7 +96,7 @@
                    <span class="text-primary">2021 - 2022</span>
                 </div>
             </div>
-            <div class="d-flex flex-column flex-md-row mt-3">
+            <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Práctica Falabella Retail</h3>
                     <div class="mb-2 fw-light">Área Electrohogar</div>
@@ -105,7 +105,7 @@
                    <span class="text-primary">Enero 2022 - Febrero 2022</span>
                 </div>
             </div>
-            <div class="d-flex flex-column flex-md-row mt-3">
+            <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">LATAM Airlines</h3>
                     <div class="mb-2 fw-light">Ingeniera Operacional</div>
