change color palette

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- NAV BAR -->
-    <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top custom-bg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Flavia Martinez</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,14 +46,14 @@
                     </div>
                 </div>
                 <div class="d-flex social-icons mb-3">
-                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-primary ">
+                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle custom-bg ">
                         <a href="https://www.linkedin.com/in/flavia-mart%C3%ADnez-parada-762283221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="fa-brands fa-linkedin-in fa-lg text-light text-decoration-none" target="_blank"></a>
                     </div>
-                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle bg-primary">
+                    <div class="custom-circle d-flex justify-content-center align-items-center rounded-circle custom-bg">
                         <a href="https://github.com/flaviamartinez" class="fa-brands fa-github fa-2x text-light text-decoration-none" target="_blank"></a>
                     </div>
                 </div>
-                <a href="./portafolio.html" class="btn btn-primary text-light" target="_blank">Portafolio</a>
+                <a href="./portafolio.html" class="btn custom-bg text-light" target="_blank">Portafolio</a>
             </div>
         </div>
     </header>
@@ -68,7 +68,7 @@
                     <div class="fw-light">Premio Excelencia Académica - Premio Mérito Educativo</div>
                 </div>
                 <div class="flex-shrink-0">
-                   <span class="text-primary">2006 - 2017</span>
+                   <span class="custom-color-span">2006 - 2017</span>
                 </div>
             </div>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
@@ -78,7 +78,7 @@
                     <div class="fw-light">Mención Administración de Empresas</div>
                 </div>
                 <div class="flex-shrink-0">
-                   <span class="text-primary">Marzo 2018 - Diciembre 2022</span>
+                   <span class="custom-color-span">Marzo 2018 - Diciembre 2022</span>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                     <div class="mb-2 fw-light">Ayudante Introducción Programación</div>
                 </div>
                 <div class="flex-shrink-0">
-                   <span class="text-primary">2021 - 2022</span>
+                   <span class="custom-color-span">2021 - 2022</span>
                 </div>
             </div>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
@@ -102,7 +102,7 @@
                     <div class="mb-2 fw-light">Área Electrohogar</div>
                 </div>
                 <div class="flex-shrink-0">
-                   <span class="text-primary">Enero 2022 - Febrero 2022</span>
+                   <span class="custom-color-span">Enero 2022 - Febrero 2022</span>
                 </div>
             </div>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
@@ -111,7 +111,7 @@
                     <div class="mb-2 fw-light">Ingeniera Operacional</div>
                 </div>
                 <div class="flex-shrink-0">
-                   <span class="text-primary">Julio 2023 - Actualidad</span>
+                   <span class="custom-color-span">Julio 2023 - Actualidad</span>
                 </div>
             </div>
         </div>
@@ -133,11 +133,11 @@
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
             <div class="my-3 text-end">
-                <button class="btn btn-primary text-light">Enviar</button>
+                <button class="btn custom-bg text-light">Enviar</button>
             </div>
         </form>
     </section>
-    <footer class="bg-primary text-center text-light p-3">
+    <footer class="custom-bg text-center text-light p-3">
         <p class="mb-0">Flavia Martinez 2024. flavia.martinez@uc.cl</p>
     </footer>
 </body>
