add experience description

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Colegio Manquecura</h3>
-                    <div class="mb-2 fw-light">Educación Básica y Media</div>
+                    <div class="my-2 fw-light">Educación Básica y Media</div>
                     <div class="fw-light">Premio Excelencia Académica - Premio Mérito Educativo</div>
                 </div>
                 <div class="flex-shrink-0">
@@ -74,7 +74,7 @@
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Pontificia Universidad Católica</h3>
-                    <div class="mb-2 fw-light">Ingeniería Comercial</div>
+                    <div class="my-2 fw-light">Ingeniería Comercial</div>
                     <div class="fw-light">Mención Administración de Empresas</div>
                 </div>
                 <div class="flex-shrink-0">
@@ -90,7 +90,8 @@
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Pontificia Universidad Católica de Chile</h3>
-                    <div class="mb-2 fw-light">Ayudante Introducción Programación</div>
+                    <div class="my-2 fw-normal">Ayudante Introducción Programación</div>
+                    <p class="fw-normal col-8 text-secondary">Apoyo a alumnos en la realización de tareas y actividades, facilitando su comprensión de los conceptos básicos de programación y a desarrollar sus habilidades técnicas.</p>
                 </div>
                 <div class="flex-shrink-0">
                    <span class="custom-color-span">2021 - 2022</span>
@@ -99,7 +100,8 @@
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">Práctica Falabella Retail</h3>
-                    <div class="mb-2 fw-light">Área Electrohogar</div>
+                    <div class="my-2 fw-normal">Área Electrohogar</div>
+                    <p class="fw-normal col-8 text-secondary">Análisis de ventas de productos en tiendas a nivel nacional, contribuyendo a la toma de decisiones estratégicas en el área de retail de electrodomésticos.</p>
                 </div>
                 <div class="flex-shrink-0">
                    <span class="custom-color-span">Enero 2022 - Febrero 2022</span>
@@ -108,7 +110,8 @@
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
                     <h4 class="mb-0">LATAM Airlines</h3>
-                    <div class="mb-2 fw-light">Ingeniera Operacional</div>
+                    <div class="my-2 fw-normal">Ingeniera Operacional</div>
+                    <p class="fw-normal col-8 text-secondary">Gestión de datos en el área de Revenue Management, enfocada en desarrollar soluciones para optimizar la operación y rentabilidad de los vuelos.</p>
                 </div>
                 <div class="flex-shrink-0">
                    <span class="custom-color-span">Julio 2023 - Actualidad</span>
