add company logo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             <h2 class="fw-bold">EXPERIENCIA</h2>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
-                    <h4 class="mb-0">Pontificia Universidad Católica de Chile</h3>
+                    <h4 class="mb-0">
+                        <img src="assets/img/puc-icon.png" alt="Falabella Logo" class="company-logo">Pontificia Universidad Católica de Chile
+                    </h4>
                     <div class="my-2 fw-normal">Ayudante Introducción Programación</div>
                     <p class="fw-normal col-8 text-secondary">Apoyo a alumnos en la realización de tareas y actividades, facilitando su comprensión de los conceptos básicos de programación y a desarrollar sus habilidades técnicas.</p>
                 </div>
@@ -99,7 +101,9 @@
             </div>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
-                    <h4 class="mb-0">Práctica Falabella Retail</h3>
+                    <h4 class="mb-0">
+                        <img src="assets/img/falabella-icon.png" alt="Falabella Logo" class="company-logo">Práctica Falabella Retail
+                    </h4>
                     <div class="my-2 fw-normal">Área Electrohogar</div>
                     <p class="fw-normal col-8 text-secondary">Análisis de ventas de productos en tiendas a nivel nacional, contribuyendo a la toma de decisiones estratégicas en el área de retail de electrodomésticos.</p>
                 </div>
@@ -109,7 +113,9 @@
             </div>
             <div class="d-flex flex-column flex-md-row mt-3 mx-4">
                 <div class="flex-grow-1">
-                    <h4 class="mb-0">LATAM Airlines</h3>
+                    <h4 class="mb-0">
+                        <img src="assets/img/latam-icon.png" alt="LATAM Logo" class="latam-logo">LATAM Airlines
+                    </h4>
                     <div class="my-2 fw-normal">Ingeniera Operacional</div>
                     <p class="fw-normal col-8 text-secondary">Gestión de datos en el área de Revenue Management, enfocada en desarrollar soluciones para optimizar la operación y rentabilidad de los vuelos.</p>
                 </div>
