add background color to portfolio header

--- a/portafolio.html
+++ b/portafolio.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="container">
-        <h2 class="section-title text-center py-4">Portfolio</h2>
-        <!-- Portfolio Items -->
+  <h2 class="section-title text-center text-light py-4">Portafolio</h2>
+  <!-- Portfolio Items -->
+  <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 col-md-12">
             <div class="portfolio-wrap d-flex flex-column align-items-center m-2 h-100">
